k8s/clusters/glug-infra/mobileapps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mobileapps
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
